from functools import partial

import pytest

from itou.companies.enums import CompanyKind
from itou.companies.models import Company
from itou.institutions.models import Institution
from itou.prescribers.models import PrescriberOrganization
from tests.companies.factories import CompanyFactory
from tests.institutions.factories import InstitutionFactory
from tests.prescribers.factories import PrescriberOrganizationFactory


def assert_set_admin_role_creation(user, organization, mailoutbox):
    # New admin.
    assert user in organization.active_admin_members

    # The admin should receive a valid email
    [email] = mailoutbox
    assert "[TEST] Votre rôle d’administrateur" == email.subject
    assert (
        "Vous avez désormais le statut d’administrateur sur l’espace professionnel de "
        f"votre organisation {organization.name} ({organization.kind})"
    ) in email.body
    assert email.to[0] == user.email

    if isinstance(organization, PrescriberOrganization):
        assert "https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14737265161617" in email.body
    elif isinstance(organization, Institution):
        assert "https://aide.emplois.inclusion.beta.gouv.fr/" not in email.body
    elif isinstance(organization, Company):
        if organization.kind in [CompanyKind.ACI, CompanyKind.AI, CompanyKind.EI, CompanyKind.ETTI, CompanyKind.EITI]:
            assert "https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14738355467409" in email.body
        elif organization.kind in [CompanyKind.EA, CompanyKind.EATT, CompanyKind.OPCS]:
            assert "https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/16925381169681" in email.body
        elif organization.kind == CompanyKind.GEIQ:
            assert "https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/15209741332113" in email.body
        else:
            raise AssertionError("Invalid siae kind")
    else:
        raise AssertionError("Invalid user kind")


def assert_set_admin_role_removal(user, organization, mailoutbox):
    # Admin removal.
    assert user not in organization.active_admin_members

    # The admin should receive a valid email
    [email] = mailoutbox
    assert f"[TEST] [Désactivation] Vous n'êtes plus administrateur de {organization.display_name}" == email.subject
    assert "Un administrateur vous a retiré les droits d'administrateur d'une structure" in email.body
    assert email.to[0] == user.email


@pytest.mark.parametrize(
    "factory",
    [
        PrescriberOrganizationFactory,
        partial(PrescriberOrganizationFactory, authorized=True),
        CompanyFactory,
        InstitutionFactory,
    ],
    ids=["prescriber org", "authorized prescriber org", "company", "insitution"],
)
def test_member_kind_display(factory, snapshot):
    org = factory()
    assert org.member_kind_display == snapshot
